[package]
name = "leetcode-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = "1.11.0"
clap = { version = "3.1.18", features = ["derive"] }
http-types = "2.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
surf = "2.3.2"
